set up unit testing

--- a/Actions2EventsMapping.vbproj
+++ b/Actions2EventsMapping.vbproj
@@ -80,6 +80,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>action2events.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Code\EntityTaskManagerRepository.vb" />
+    <Compile Include="Code\ITaskRepository.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -130,6 +132,10 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="action2events.edmx.sql" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
