--- a/App.config
+++ b/App.config
@@ -4,6 +4,6 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client" />
   </startup>
   <connectionStrings>
-    <add name="action2eventsEntities" connectionString="metadata=res://*/action2events.csdl|res://*/action2events.ssdl|res://*/action2events.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=w7PC011\sqlexpress;initial catalog=action2events;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="action2eventsEntities" connectionString="metadata=res://*/action2events.csdl|res://*/action2events.ssdl|res://*/action2events.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=w7pc011\sqlexpress;initial catalog=action2events;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
