--- a/Actions2EventsMapping/Actions2EventsMapping.vbproj
+++ b/Actions2EventsMapping/Actions2EventsMapping.vbproj
@@ -80,13 +80,15 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>action2events.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Presenter\MainPresenter.vb" />
+    <Compile Include="Presenter\IMainPresenter.vb" />
     <Compile Include="Model\InMemoryTaskRepository.vb" />
     <Compile Include="Model\ITaskRepository.vb" />
-    <Compile Include="Form1.vb">
+    <Compile Include="MainForm.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <Compile Include="MainForm.Designer.vb">
+      <DependentUpon>MainForm.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -104,10 +106,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="View\DebugTasksView.vb" />
+    <Compile Include="View\IMainView.vb" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
